// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<Header
  activeTrigger={null}
  additionalLogos={Array []}
  baseUrl=""
  chevronOverAvatar={false}
  closeMenu={[Function]}
  communityId="someId"
  communitySelector={
    Array [
      Object {
        "label": "Community Name",
        "value": "1",
      },
    ]
  }
  groupIds={
    Array [
      "",
    ]
  }
  hideJoinNow={false}
  hideSearch={false}
  loginUrl="/some/login/url"
  logos={Array []}
  menuItems={Array []}
  onMobileToggleClick={[Function]}
  openMenu={[Function]}
  openedMenu={null}
  pageId="home"
  profile={null}
  registerUrl="/some/register/url"
  theme={
    Object {
      "additionalLogos": "src-shared-components-tc-communities-Header-style___additionalLogos___3q_l-r",
      "authorize": "src-shared-components-tc-communities-Header-style___authorize___3ARhM1",
      "avatar": "src-shared-components-tc-communities-Header-style___avatar___2my2EO",
      "avatarMobile": "src-shared-components-tc-communities-Header-style___avatarMobile___2uNTU7",
      "btnLogin": "src-shared-components-tc-communities-Header-style___btnLogin___37sgVL",
      "btnRegister": "src-shared-components-tc-communities-Header-style___btnRegister___2mlu6D",
      "challengeDropdown": "src-shared-components-tc-communities-Header-style___challengeDropdown___-JHIKR",
      "chevronDown": "src-shared-components-tc-communities-Header-style___chevronDown___pkTgNM",
      "container": "src-shared-components-tc-communities-Header-style___container___2P8yCl",
      "header": "src-shared-components-tc-communities-Header-style___header___3TwY_q",
      "logo": "src-shared-components-tc-communities-Header-style___logo___z2xG6g",
      "logos": "src-shared-components-tc-communities-Header-style___logos___38nqG0",
      "logosWrap": "src-shared-components-tc-communities-Header-style___logosWrap___2mFpt0",
      "menu": "src-shared-components-tc-communities-Header-style___menu___2jUFES",
      "menuItem": "src-shared-components-tc-communities-Header-style___menuItem___2akRqA",
      "menuLink": "src-shared-components-tc-communities-Header-style___menuLink___3gVFGn",
      "menuLinkActive": "src-shared-components-tc-communities-Header-style___menuLinkActive___XHiLmA",
      "menuWrap": "src-shared-components-tc-communities-Header-style___menuWrap___a0TMCp",
      "menuWrapOpen": "src-shared-components-tc-communities-Header-style___menuWrapOpen___1YVvVW",
      "mobileToggle": "src-shared-components-tc-communities-Header-style___mobileToggle___fRfj2q",
      "search": "src-shared-components-tc-communities-Header-style___search___3BJGlw",
      "userMenu": "src-shared-components-tc-communities-Header-style___userMenu___V4Thbg",
      "userMenuHandle": "src-shared-components-tc-communities-Header-style___userMenuHandle___38gE0E",
      "userWrap": "src-shared-components-tc-communities-Header-style___userWrap___NN47oY",
      "userWrapMobile": "src-shared-components-tc-communities-Header-style___userWrapMobile___3s9lpu",
    }
  }
/>
`;

exports[`Snapshot match 2`] = `
<Header
  activeTrigger={null}
  additionalLogos={Array []}
  baseUrl=""
  chevronOverAvatar={false}
  closeMenu={[Function]}
  communityId="someId"
  communitySelector={
    Array [
      Object {
        "label": "Community Name",
        "value": "1",
      },
    ]
  }
  cssUrl="some/css/url"
  groupIds={
    Array [
      "",
    ]
  }
  hideJoinNow={false}
  hideSearch={false}
  isMobileOpen={true}
  loginUrl="/some/login/url"
  logos={
    Array [
      "some/logo/url",
    ]
  }
  menuItems={
    Array [
      Object {
        "title": "Menu Item 1",
        "url": "pageId1",
      },
      Object {
        "title": "Menu Item 2",
        "url": "pageId2",
      },
      Object {
        "title": "Menu Item 3",
        "url": "pageId3",
      },
    ]
  }
  onMobileToggleClick={[Function]}
  openMenu={[Function]}
  openedMenu={null}
  pageId="other"
  profile={null}
  registerUrl="/some/register/url"
  theme={
    Object {
      "additionalLogos": "src-shared-components-tc-communities-Header-style___additionalLogos___3q_l-r",
      "authorize": "src-shared-components-tc-communities-Header-style___authorize___3ARhM1",
      "avatar": "src-shared-components-tc-communities-Header-style___avatar___2my2EO",
      "avatarMobile": "src-shared-components-tc-communities-Header-style___avatarMobile___2uNTU7",
      "btnLogin": "src-shared-components-tc-communities-Header-style___btnLogin___37sgVL",
      "btnRegister": "src-shared-components-tc-communities-Header-style___btnRegister___2mlu6D",
      "challengeDropdown": "src-shared-components-tc-communities-Header-style___challengeDropdown___-JHIKR",
      "chevronDown": "src-shared-components-tc-communities-Header-style___chevronDown___pkTgNM",
      "container": "src-shared-components-tc-communities-Header-style___container___2P8yCl",
      "header": "src-shared-components-tc-communities-Header-style___header___3TwY_q",
      "logo": "src-shared-components-tc-communities-Header-style___logo___z2xG6g",
      "logos": "src-shared-components-tc-communities-Header-style___logos___38nqG0",
      "logosWrap": "src-shared-components-tc-communities-Header-style___logosWrap___2mFpt0",
      "menu": "src-shared-components-tc-communities-Header-style___menu___2jUFES",
      "menuItem": "src-shared-components-tc-communities-Header-style___menuItem___2akRqA",
      "menuLink": "src-shared-components-tc-communities-Header-style___menuLink___3gVFGn",
      "menuLinkActive": "src-shared-components-tc-communities-Header-style___menuLinkActive___XHiLmA",
      "menuWrap": "src-shared-components-tc-communities-Header-style___menuWrap___a0TMCp",
      "menuWrapOpen": "src-shared-components-tc-communities-Header-style___menuWrapOpen___1YVvVW",
      "mobileToggle": "src-shared-components-tc-communities-Header-style___mobileToggle___fRfj2q",
      "search": "src-shared-components-tc-communities-Header-style___search___3BJGlw",
      "userMenu": "src-shared-components-tc-communities-Header-style___userMenu___V4Thbg",
      "userMenuHandle": "src-shared-components-tc-communities-Header-style___userMenuHandle___38gE0E",
      "userWrap": "src-shared-components-tc-communities-Header-style___userWrap___NN47oY",
      "userWrapMobile": "src-shared-components-tc-communities-Header-style___userWrapMobile___3s9lpu",
    }
  }
/>
`;
